ghc-4335c07/testsuite/tests/arrows/should_fail/arrowfail003.hs
{-# LANGUAGE Arrows #-}
-- Arrow commands where an expression is expected

module ShouldFail where

import Control.Arrow

foo = returnA -< []
bar = (|zeroArrow|)
